# polar-semeval-2026

./: .gitignore  main.py  predictions.jsonl  pyproject.toml  requirements.txt  utils.py
data/: README.md  Trial_Data.csv
data-public/: README.md  readme
data-public/dev/: amh.csv  arb.csv  ben.csv  deu.csv  eng.csv  fas.csv  hau.csv  hin.csv  ita.csv  khm.csv  mya.csv  nep.csv  ori.csv  pan.csv  pol.csv  rus.csv  spa.csv  swa.csv  tel.csv  tur.csv  urd.csv  zho.csv
data-public/test/: amh.csv  arb.csv  ben.csv  deu.csv  eng.csv  fas.csv  hau.csv  hin.csv  ita.csv  khm.csv  mya.csv  nep.csv  ori.csv  pan.csv  pol.csv  rus.csv  spa.csv  swa.csv  tel.csv  tur.csv  urd.csv  zho.csv
data-public/train/: amh.csv  arb.csv  ben.csv  deu.csv  eng.csv  fas.csv  hau.csv  hin.csv  ita.csv  khm.csv  mya.csv  nep.csv  ori.csv  pan.csv  pol.csv  rus.csv  spa.csv  swa.csv  tel.csv  tur.csv  urd.csv  zho.csv
data/relabelling/: clean_eng.csv  eng.csv  split_eng.csv
finetuning/llm/gpt2/: main.ipynb
finetuning/slm/: baseline.ipynb
llm/: 100samples.csv  baseline.ipynb  better_prompt.ipynb  data_utils.py  gepa.ipynb  main.py  prompt_utils.py
predictions/: prediction.json
src/llm/: 300samples.csv  backoff.py  prompt-ds.txt
src/semevalpolar/: utils.py
src/semevalpolar/ensemble/: ensemble.ipynb  ensemble.py
src/semevalpolar/finetuning/: data_utils.py
src/semevalpolar/llm/: backoff.py  baseline.ipynb  better_prompt.ipynb  config.py  custom_rules.py  data_utils.py  gepa.ipynb  main.py  multistage.ipynb  prompt-ambiguity.txt  prompt-ds-main-classifier.txt  prompt-ds.txt  (+6 more)
(+126 files in other folders)
